[package]
name = "ethportal-api"
version = "0.1.0"
edition = "2021"
description = "Definitions for various Ethereum Portal Network JSONRPC APIs"
license = "GPL-3.0"

[dependencies]
enr = {version= "0.7.0", features=["serde", "ed25519"]}
jsonrpsee = {version="0.16.2", features = ["macros"]}
serde = { version = "1.0.150", features = ["derive"] }

[dev-dependencies]
ethportal-api = { path = ".", features = ["client"] }
serde_json = "1.0.89"

[features]
client = ["jsonrpsee/client", "jsonrpsee/async-client"]
server = ["jsonrpsee/server"]
